--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^5.2.1",
+    "@prisma/client": "^6.0.0",
     "cors": "^2.8.5",
-    "@prisma/client": "^6.0.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
